@@ -13,6 +13,10 @@ For a complete change history, please see the CVS log comments.
 CHANGES - Current Version:
 --------------------------
 
+- Fixed problem writing collections where MITAB was sometimes trying to 
+  read past EOF in write mode (bug 1657).
+
+
 Version 1.6.0 (2007-02-15)
 --------------------------
 
@@ -748,5 +752,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.170 2007-02-15 20:19:06 dmorissette Exp $
+$Id: HISTORY.TXT,v 1.171 2007-02-22 18:35:52 dmorissette Exp $
 ------------
